MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanEvent__e/PaymentPlanEvent__e.object-meta.xml
<CustomObject>
    <label>Payment Plan Event</label>
    <pluralLabel>Payment Plan Events</pluralLabel>
</CustomObject>