MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanEvent__e/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <label>Currency ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>