MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanEvent__e/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>