MODON MRE BPDEV/force-app/main/default/objects/PaymentPlanEvent__e/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <label>Source Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>